# routes/cars.js
@@ -1,5 +1,7 @@
 const express = require('express');
 
+const { carValidationRules, validate } = require('../validation/validation');
+
 const router = express.Router();
 
 const carController = require('../controllers/cars');
@@ -8,9 +10,9 @@ router.get('/', carController.getAll);
 
 router.get('/:id', carController.getSingle);
 
-router.post('/', carController.createCar);
+router.post('/', carValidationRules(), validate, carController.createCar);
 
-router.put('/:id', carController.updateCar);
+router.put('/:id', carValidationRules(), validate, carController.updateCar);
 
 router.delete('/:id', carController.deleteCar);
 
