# routes/index.js
@@ -6,6 +6,8 @@ router.get('/', (req, res) => {
     res.send('hello world')
 })
 
-router.use('/cars1', require('./cars'));
+router.use('/cars', require('./cars'));
+
+router.use('/clients', require('./clients'));
 
 module.exports = router;
